--- a/feature-list/src/main/res/values/strings.xml
+++ b/feature-list/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Feature List</string>
     <string name="movie_poster">Movie poster</string>
+    <string name="retry">Retry</string>
 </resources>
