--- a/feature-details/src/main/res/values/strings.xml
+++ b/feature-details/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Feature Details</string>
     <string name="backdrop">backdrop</string>
+    <string name="cast">Cast</string>
+    <string name="overview">Overview</string>
 </resources>
